# li2

./: .gdb_history  .gitignore  .gitmodules  Cargo.toml  README.md
crystals-dilithium-sys/: build.rs  wrapper.h
dilithium/: Cargo.toml
dilithium/src/: dilithium.rs  expandmask.rs  expands.rs  lib.rs  packing.rs
dilithium/tests/: kat.rs
main/: Cargo.toml
main/src/: challenge.rs  dilithium.rs  expanda.rs  fast.rs  keccak.rs  lib.rs  ntt.rs  packing.rs  params.rs  poly.rs  reduce.rs  ring.rs  rounding.rs  small.rs
main/tests/: kat.rs
main/tools/: pqcgenkat.rs
src/: api.rs  challenge.rs  dilithium.rs  dilithium3.rs  expanda.rs  expandmask.rs  expands.rs  fips202.rs  keccak.rs  keygen.rs  lib.rs  ntt.rs  packing.rs  params.rs  poly.rs  reduce.rs  rounding.rs  symmetric_shake.rs  variants.rs
staticlib/: Cargo.toml
staticlib/src/: lib.rs
