[package]
edition = "2021"
name = "li2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.crypto]
features = ["signature"]
version = "0.4.0"

[dependencies]
crystals-dilithium-sys = {path = "vendor/crystals-dilithium-sys"}
