[package]
edition = "2021"
name = "li2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signature = "1.6.4"
digest = "0.10.6"
crystals-dilithium-sys = {path = "vendor/crystals-dilithium-sys"}

[dev-dependencies]
once_cell = "1.16.0"
static_assertions = "1.1.0"