[package]
authors = ["Amber Sprenkels <amber@electricdusk.com>"]
description = "Rust implementation of the Dilithium signature scheme"
edition = "2021"
license = "MIT"
name = "li2"
repository = "https://github.com/dsprenkels/li2"
version = "0.0.1"

[dependencies]
digest = {version = "0.10.6", default-features = false}
rand = {version = "0.8.5", optional = true}
serde = {version = "1.0", features = ["derive"], optional = true}
serde-big-array = {version = "0.5.1", optional = true}
serde_json = {version = "1.0", optional = true}
signature = {version = "1.6.4", default-features = false}

[dev-dependencies]
crystals-dilithium-sys = {path = "../crystals-dilithium-sys"}
once_cell = "1.16.0"
rand = "0.8.5"
static_assertions = "1.1.0"

[features]
basic-api = []
default = ["std", "fast"]
fast = []
ring = ["std", "rand", "serde", "serde-big-array", "serde_json"]
small = []
std = ["digest/std", "signature/std"]
